--- a/src/app/restore/restore.page.html
+++ b/src/app/restore/restore.page.html
@@ -20,15 +20,15 @@
       
       <ion-card-content>
         <ion-item>
-          <ion-input label="Nombre de usuario:" labelPlacement="stacked" placeholder="Juan Pérez" type="text"></ion-input>
+          <ion-input label="Nombre de usuario:" labelPlacement="stacked" placeholder="jofernandezp" type="text" [(ngModel)]="username"></ion-input>
         </ion-item>
         
         <ion-item>
-          <ion-input label="Nueva contraseña:" labelPlacement="stacked" placeholder="*******" type="password"></ion-input>
+          <ion-input label="Nueva contraseña:" labelPlacement="stacked" placeholder="**********" type="password" [(ngModel)]="password"></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-input label="Repetir contraseña:" labelPlacement="stacked" placeholder="*******" type="password"></ion-input>
+          <ion-input label="Repetir contraseña:" labelPlacement="stacked" placeholder="**********" type="password" [(ngModel)]="password2"></ion-input>
         </ion-item>
         <br>
         <!--
@@ -38,9 +38,9 @@
         -->
         
         <br>
-        <br>
+        
         <div class="ion-text-center">
-          <ion-button fill="solid" class="boton-inicio">Iniciar Sesión</ion-button>
+          <ion-button fill="solid" class="boton-inicio" (click)="restore()">Recuperar</ion-button>
         </div>
       </ion-card-content>
       
@@ -52,6 +52,28 @@
 
   </div>
   <ion-img src='../../assets/icon/duoc.png' alt="DuocUC-ICO"></ion-img>
+  <ion-toast
+    [isOpen]="alertaOpen"
+    message="El usuario ingresado no existe"
+    [duration]="5000"
+    (didDismiss)="mostrarAlerta(false)"
+    class="custom-toast"
+  ></ion-toast>
+  <ion-toast
+    [isOpen]="alertaOpen2"
+    message="Las contraseñas no coinciden"
+    [duration]="5000"
+    (didDismiss)="mostrarAlerta2(false)"
+    class="custom-toast"
+  ></ion-toast>
+  <ion-toast
+    [isOpen]="alertaOpen3"
+    message="¡Contraseña actualizada exitosamente!"
+    [duration]="4000"
+    (didDismiss)="mostrarAlerta3(false)"
+    class="custom-toast2"
+  ></ion-toast>
+
   
   
 </ion-content>
