--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,64 @@
 #container {
-  text-align: center;
+  
 
-  position: absolute;
-  left: 0;
-  right: 0;
+  
+  left: 5%;
+  right: 5%;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-50%,-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+
+.titulo{
+  font-weight: bold;
+  padding-top: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  color: #ffffff;
+  font-style: italic;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
 
-  color: #8c8c8c;
-
-  margin: 0;
+ion-img{
+  height: 15%;
+  width: 40%;
+  bottom: 0;
+  transform: translate(75%);
+}
+p{
+  font-weight: bolder;
+  font-size: 17px;
+  padding-top: 2%;
+  
+}
+p span{
+  font-weight: normal;
+  font-size: 15px;
+  ;
+}
+ion-content{
+  --background: #012c56;
+}
+ion-card{
+  --background: #ffffff;
+  color: #000000;
+}
+ion-card-title h1{
+  color: #000000;
+  font-weight: bold;
+  padding-left: 5%;
+  padding-bottom: 2%;
+}
+ion-card-content{
+  padding-bottom: 5%;
+}
+ul{
+  padding-left: 7%;
+  margin-bottom: 0%;
+  margin-top: 0%;
+}
+ul li{
+  font-style: italic;
+  font-weight: 200;
 }
 
-#container a {
-  text-decoration: none;
-}
