--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button default-href="#" text="Salir"></ion-back-button>
+      <ion-back-button default-href="#" text="Salir" icon="close-outline"></ion-back-button>
     </ion-buttons>
     <ion-title>Inicio</ion-title>
   </ion-toolbar>
@@ -9,7 +9,7 @@
 
 <ion-content [fullscreen]="true">
 
-  <h2 class="titulo">¡Bienvenido {{nombre}}!</h2>
+  <h1 class="titulo">¡Bienvenido {{nombre}}!</h1>
   <br>
   <br>
 
@@ -18,6 +18,7 @@
       <ion-card-title>
         <h1>Datos personales</h1>
       </ion-card-title>
+
       <ion-card-content>
         <p>Usuario: </p>
         <span>{{ username }}</span>
@@ -30,20 +31,20 @@
         <p>Carrera: </p>
         <span>{{carrera}}</span>
         <br>
-      </ion-card-content>
         
+      </ion-card-content>
+
       <ion-card-title>
+        
         <h1>Ramos en curso</h1>
       </ion-card-title>
+      
       <ion-card-content>
         <ul *ngFor="let i of ramos">
           <li>{{i}}</li>
         </ul>
       </ion-card-content>
-
     </ion-card>
-  
-    
   </div>
   <ion-img src='../../assets/icon/duoc.png' alt="DuocUC-ICO"></ion-img>
 </ion-content>
