--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>Ingreso de usuario</ion-title>
+    <ion-title class="ion-text-end">Ingreso de usuario</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
