--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,10 +1,3 @@
-#container {
-  left: 5%;
-  right: 5%;
-  top: 50%;
-  transform: translateY(-50%,-50%);
-}
-
 .titulo{
   font-weight: bold;
   padding-top: 5%;
@@ -14,14 +7,19 @@
   font-style: italic;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
+div{
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 15%;
+}
 ion-back-button{
   padding-left: 10%;
 }
 ion-img{
-  height: 15%;
+  height: 20%;
   width: 40%;
   bottom: 0;
-  transform: translate(75%);
+  transform: translate(75%,155%);
 }
 p{
   font-weight: bolder;
@@ -41,22 +39,24 @@ ion-card{
   --background: #ffffff;
   color: #000000;
 }
-ion-card-title h1{
+ion-card-title{
   color: #000000;
   font-weight: bold;
-  padding-left: 5%;
-  padding-bottom: 2%;
-}
-ion-card-content{
+  
+  padding-top: 5%;
   padding-bottom: 5%;
 }
-ul{
-  padding-left: 7%;
-  margin-bottom: 0%;
-  margin-top: 0%;
+
+.boton-cuenta{
+  --background: #012c56;
+  width: 60%;
 }
-ul li{
-  font-style: italic;
-  font-weight: 200;
+.boton-qr{
+  --background: #b49300;
+  width: 60%;
+}
+.boton-salir{
+  --background: #801401;
+  width: 60%;
 }
 
