Implementación de QR

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
       
       <ion-card-content class="ion-text-center">
         <ion-button fill="solid" class="boton-cuenta" (click)="verCuenta()">MI CUENTA</ion-button>
-        <ion-button fill="solid" class="boton-qr"> QR</ion-button>
+        <ion-button fill="solid" class="boton-qr" (click)="verQR()"> QR</ion-button>
         <ion-button fill="solid" class="boton-salir" (click)="logout()">CERRAR SESIÓN</ion-button>
         
       </ion-card-content>
