--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,6 +20,7 @@
         <ion-button fill="solid" class="boton-cuenta" (click)="verCuenta()">MI CUENTA</ion-button>
         <ion-button fill="solid" class="boton-qr" (click)="verQR()"> QR</ion-button>
         <ion-button fill="solid" class="boton-salir" (click)="logout()">CERRAR SESIÓN</ion-button>
+        <ion-button fill="solid" class="boton-salir" (click)="filtrar()">FILTRAR</ion-button>
         
       </ion-card-content>
       <hr>
